syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Domain.Protos";

package service;

service Greeter {
  rpc Authorization (GetUser) returns (GetUserReply);
  rpc TakeChats (GetChats) returns (GetChatReply);
  rpc GetUsers (GetUsersByName) returns (GetUsersReply);
  rpc RegistrationUser (UserCreate) returns (Reply);
  rpc CreateChat (ChatCreate) returns (Reply);
  rpc SendMessage (MessageCreate) returns (Reply);
  rpc JoinChat (GetChat) returns (stream Message);
  rpc GetUserById (User) returns (User);
}

message GetUser {
  string Login = 1;
  string Password = 2;
}

message GetUsersReply {
  repeated User user = 1;
  Response response = 2;
}

message GetUserReply{
  User user = 1;
  Response response = 2;
}

message UserCreate{
  string Login = 1;
  string Password = 2;
  string UserName = 3;
}

message ChatCreate{
  Chat chat = 1;
}

message User{
  string Id = 1;
  string UserName = 2;
  string Login = 3;
  string Password = 4;
  repeated string chatsIds = 5;
  bool Private = 6;
  google.protobuf.Timestamp Registration = 7;
  google.protobuf.Timestamp Authorize = 8;
  bool InNetwork = 10;
  bool HasImage = 11;
}

message GetChats{
  string UserId = 1;
}

message GetChatReply{
  Response response = 1;
  repeated Chat Chats = 2;
}

message Chat{
  string Id = 1;
  repeated string UserIds = 2;
  repeated Message History = 3;
  repeated UserInfo UserInfos = 4;
}

message UserInfo{
  string Id = 1;
  string UserName = 2;
}

message Message{
  string Content = 1;
  string AuthorId = 2;
  google.protobuf.Timestamp Time = 3;
  string AuthorName = 4;
}

message MessageCreate{
  Message message = 1;
  string ChatId = 2;
}

message Reply{
  Response response = 1;
}

message GetChat{
  string ChatId = 1;
}

message GetUsersByName{
  string Name = 1;
}

enum Response{
  OK = 0;
  Error = 1;
}
